@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.11980 2013/03/08 20:46:36 adam Exp $
+$NetBSD: TODO,v 1.11981 2013/03/09 09:44:24 wiz Exp $
 
 Suggested new packages
 ======================
@@ -622,7 +622,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ghc-7.6
 	o giflib-5.0.3
 	o gifsicle-1.48
-	o gimp-ufraw-0.19.1
 	o gkrellm-2.3.5
 	o gkrellm-multiping-2.0.13
 	o gkrellm-snmp-1.0
