@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.12 2012/10/23 18:16:54 asau Exp $
+# $NetBSD: Makefile,v 1.13 2012/11/27 22:13:32 gls Exp $
 #
 
-DISTNAME=		paramiko-1.9.0
+DISTNAME=		paramiko-1.10.0
 PKGNAME=		${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=		security
 MASTER_SITES=		http://pypi.python.org/packages/source/p/paramiko/
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
-HOMEPAGE=		http://www.lag.net/paramiko/
+HOMEPAGE=		https://github.com/paramiko/paramiko/
 COMMENT=		SSH2 protocol library
 LICENSE=		gnu-lgpl-v2.1
 
