@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.6 2011/07/22 14:03:30 obache Exp $
+$NetBSD: distinfo,v 1.7 2012/11/27 22:13:32 gls Exp $
 
-SHA1 (paramiko-1.9.0.tar.gz) = b48f18fb96910d61609604d35a03590dd9548d7f
-RMD160 (paramiko-1.9.0.tar.gz) = b2a2c7a4418d293b007c89125538405abb1894c5
-Size (paramiko-1.9.0.tar.gz) = 814841 bytes
+SHA1 (paramiko-1.10.0.tar.gz) = 1f66205b90b193aab9ed59c5fcb5e7ab2cc07cd3
+RMD160 (paramiko-1.10.0.tar.gz) = 86c03137a211742591e1a8a77a86fd00f78e48b3
+Size (paramiko-1.10.0.tar.gz) = 822622 bytes
